Fix alignement on data source picker a bit

--- a/src/components/databaseDocs/styles.css
+++ b/src/components/databaseDocs/styles.css
@@ -12,17 +12,19 @@
 .button-wrapper {
   display: flex;
   flex-wrap: wrap;
+  gap: 15px;
 }
 
 .data-source {
   display: flex;
   flex-direction: column;
   padding: 10px;
-  margin: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   cursor: pointer;
-  display: flex;
+  width: auto;
   align-items: center;
-  border: 2px solid transparent;
+  /*border: 2px solid transparent;*/
   text-decoration: none !important;
 }
 
@@ -36,10 +38,16 @@
   border-radius: 8px;
 }
 
+.data-source .image-container {
+  height: 50px;
+  width: 50px;
+  margin-bottom: 10px;
+}
+
 .data-source img {
   max-width: 50px;
-  border-radius: 0px;
   height: auto;
+  border-radius: 0;
 }
 
 .data-source svg {
